# docs/swagger.yaml
@@ -904,15 +904,19 @@ paths:
   /api/v1/wishes/batch:
     post:
       consumes:
+      - multipart/form-data
       - application/json
-      description: 批量导入多个心愿
+      description: 批量导入多个心愿，支持JSON和XLSX文件
       parameters:
-      - description: 心愿信息数组
+      - description: JSON格式的心愿信息数组
         in: body
         name: request
-        required: true
         schema:
           $ref: '#/definitions/controllers.BatchCreateWishRequest'
+      - description: Excel文件，支持 .xlsx 和 .xls
+        in: formData
+        name: file
+        type: file
       produces:
       - application/json
       responses:
